[gd_scene load_steps=10 format=3 uid="uid://b5u6tg7siuhu3"]

[ext_resource type="Texture2D" uid="uid://by3rpc8q6xvbm" path="res://assets/crosshair.png" id="2_g2els"]
[ext_resource type="Script" uid="uid://di65wp5hhfdbu" path="res://scripts/player_hud.gd" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://bw1balal8eq6t" path="res://scripts/player.gd" id="3_ob08u"]
[ext_resource type="Script" uid="uid://bmckmosxruiu" path="res://scripts/fps_label.gd" id="4_dqkch"]
[ext_resource type="FontFile" uid="uid://c71hixmpr8htu" path="res://assets/Misc/VCR_OSD_MONO_1.001.ttf" id="4_qlg0r"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qlg0r"]
margin = 0.01

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m04g1"]
height = 1.2

[sub_resource type="LabelSettings" id="LabelSettings_fjrip"]
font = ExtResource("4_qlg0r")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_ur7pv"]
font = ExtResource("4_qlg0r")
font_size = 20

[node name="player" type="StairsCharacter3D" groups=["player"]]
collider = NodePath(".")
step_height_up = 0.8
step_height_down = 0.8
collision_layer = 2
collision_mask = 5
script = ExtResource("3_ob08u")

[node name="standing_collision_shape" type="CollisionShape3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_qlg0r")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.602376, 0)
shape = SubResource("CapsuleShape3D_m04g1")
disabled = true

[node name="uncrouch_check" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head" type="Node3D" parent="neck"]

[node name="eyes" type="Node3D" parent="neck/Head"]
transform = Transform3D(1, 0, 0, 0, 0.994656, -0.103244, 0, 0.103244, 0.994656, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="neck/Head/eyes"]
current = true

[node name="Interactioncast" type="RayCast3D" parent="neck/Head/eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.0540787, -0.998537, 0, 0.998537, 0.0540787, 0, 0, 0)
target_position = Vector3(0, -4, 0)
collision_mask = 3

[node name="PlayerHud" type="CanvasLayer" parent="."]
script = ExtResource("2_qhqgy")

[node name="Control" type="Control" parent="PlayerHud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="PlayerHud/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g2els")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerHud/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -58.0
offset_right = 252.0
grow_vertical = 0
alignment = 1

[node name="HealthBar" type="ProgressBar" parent="PlayerHud/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_qlg0r")
step = 1.0
value = 100.0

[node name="StaminaBar" type="ProgressBar" parent="PlayerHud/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_qlg0r")
step = 1.0
value = 100.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PlayerHud/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 255.0
offset_top = -60.0
offset_right = 507.0
offset_bottom = 1.0
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="PlayerHud/Control/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "<- Health"
label_settings = SubResource("LabelSettings_fjrip")

[node name="Label2" type="Label" parent="PlayerHud/Control/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "<- Stamina"
label_settings = SubResource("LabelSettings_ur7pv")

[node name="pickup_notifier" type="Label" parent="PlayerHud/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 259.0
offset_right = 75.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_qlg0r")
text = "Press \"E\" to pick up"
horizontal_alignment = 1

[node name="punch_notifier" type="Label" parent="PlayerHud/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 259.0
offset_right = 75.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_qlg0r")
text = "LMB to Punch"
horizontal_alignment = 1

[node name="fuel_notifier" type="Label" parent="PlayerHud/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 259.0
offset_right = 75.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_qlg0r")
text = "Press E to pick up fuel"
horizontal_alignment = 1

[node name="FPS_Label" type="Label" parent="PlayerHud/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("4_qlg0r")
script = ExtResource("4_dqkch")

[node name="Items" type="Label" parent="PlayerHud/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -481.0
offset_bottom = 18.0
grow_horizontal = 0
size_flags_horizontal = 0
text = "Current Objective: Collect Medpacks (0/3)"
label_settings = SubResource("LabelSettings_fjrip")
